--- a/client/styles/dashboard.css
+++ b/client/styles/dashboard.css
@@ -14,6 +14,19 @@
   vertical-align: bottom;
 }
 
+#date-picker > table > thead > tr:nth-child(1) > th.switch.ng-binding{
+  position: absolute;
+  left: 60px;
+  width: 189px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  height: 0;
+  background-color: transparent;
+}
+
+
 .table-striped>tbody>tr:nth-of-type(odd),
 .table-striped>tbody>tr:nth-of-type(even) {
   background-color: rgba(0, 0, 0, .7);
@@ -29,16 +42,6 @@
   color: #79DFB6!important;
   position: relative;
   top: 3px;
-}
-
-#date-picker {
-  position: relative;
-  top: 175px;
-  left: 0;
-  right: 0;
-  width: 100%;
-  margin: auto;
-  overflow: hidden;
 }
 
 div.form-container {
