--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,8 +1,7 @@
-  <div class='footer-overlay' ng-class='{ "footer-overlay" : (showFooterOverlay) }'></div>
-  <div ng-controller='FooterCtrl as footerCtrl' ng-class="{'show-footer': ( showFooter )}"  ng-init='footerCtrl.registerEvents();' class="navbar navbar-default navbar-fixed-bottom text-center">
-    <modal-dialog show='showOverlay' width='750px' height='60%'></modal-dialog>
-    <div ng-hide="showUpload" class="container">
-      <ul id="footer-btns">
+<div ng-controller='FooterCtrl as footerCtrl'>
+<div ng-show='showFooter' id='footer-overlay'></div>
+  <div  ng-init='footerCtrl.registerEvents();'  id='footer-btn-container' class="navbar navbar-default navbar-fixed-bottom text-center">
+      <ul ng-show='showFooter' id="footer-btns">
         <li>
           <div id='share-file' ng-click='footerCtrl.options("location")' class="btn-custom share-file">share location</div>
         </li>
@@ -16,5 +15,5 @@
           <div id='disconnect' ng-click='footerCtrl.options("disconnect")' class="btn-custom disconnect">disconnect</div>
         </li>
       </ul>
-    </div>
   </div>
+</div>
