--- a/server/views/index.html
+++ b/server/views/index.html
@@ -37,9 +37,9 @@
 </head>
 
 <body ng-app="RoomBaby">
-  <div ng-include src="'views/navbar.html'"></div>
+  <div ng-include src="'views/includes/navbar.html'"></div>
   <div ui-view></div>
-  <div ng-include src="'views/footer.html'"></div>
+  <div ng-include src="'views/includes/footer.html'"></div>
   <!-- Grunt Build Vendor & Dev Scripts -->
   <script src="/build/vendor.min.js"></script>
   <script src="/scripts/lib/opentok-min.js"></script>
