--- a/client/styles/footer.css
+++ b/client/styles/footer.css
@@ -1,47 +1,60 @@
-.nav.navbar-nav.footer-custom {
-  position: relative;
-  left: 0;
-  right: 0;
-  width: 100%;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  height: 47px;
-}
-
-#footer-btns {
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-
-#footer-overlay {
-  position: fixed;
-  background-color: rgba(0,0,0,.8);
-  width: 100%;
-  height: 47px;
-  bottom: 0;
-  margin: auto;
-  display: none;
-}
-
-.navbar.navbar-default.navbar-fixed-bottom {
-  opacity: 0;
-  border-top: transparent;
-  background-color: transparent;
-}
-
-.navbar.navbar-default.navbar-fixed-bottom.show-footer {
-  opacity: 0;
-}
-
-ul.nav.navbar-nav.footer-custom {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  width: 100%;
-  text-align: center;
-}
+ #footer-btn-container > ul:nth-child(2) > li {
+   color: white;
+   position: relative;
+   margin: auto;
+   top: 16px;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   height: 100%;
+   cursor: default;
+ }
+ 
+ .nav.navbar-nav.footer-custom {
+   position: relative;
+   left: 0;
+   right: 0;
+   width: 100%;
+   top: 0;
+   bottom: 0;
+   margin: auto;
+   height: 47px;
+ }
+ 
+ #footer-btns {
+   display: -webkit-inline-flex;
+   display: -ms-inline-flexbox;
+   display: inline-flex;
+ }
+ 
+ #footer-overlay {
+   position: fixed;
+   background-color: rgba(0, 0, 0, .8);
+   width: 100%;
+   height: 47px;
+   bottom: 0;
+   margin: auto;
+   display: none;
+   border-top: 1px solid rgba(255, 255, 255, .6);
+ }
+ 
+ .navbar.navbar-default.navbar-fixed-bottom {
+   opacity: 0;
+   border-top: transparent;
+   background-color: transparent;
+ }
+ 
+ .navbar.navbar-default.navbar-fixed-bottom.show-footer {
+   opacity: 0;
+ }
+ 
+ ul.nav.navbar-nav.footer-custom {
+   position: absolute;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   margin: auto;
+   width: 100%;
+   text-align: center;
+ }
