--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -60,12 +60,13 @@ div.body-overlay {
   text-decoration: none;
   text-align: center;
   cursor: pointer;
-  color: #efefef;
-  background: transparent;
-  font-size: 12px;
+  color: #7EB1DC;
+  background: 0 0;
+  font-size: 13px;
   font-weight: 400;
   padding-top: 5px;
   margin: auto;
+  text-transform: capitalize;
 }
 
 #uploadForm > div {
@@ -82,8 +83,6 @@ div.body-overlay {
   margin: 0 auto;
   text-align: center;
 }
-
-
 
 .table {
   width: 100%;
@@ -183,19 +182,19 @@ button#details.btn.btn-md.members {
 .btn-custom-send:hover,
 .btn-custom-send:active,
 .btn-custom-send:focus {
-  border: 1px solid #337ab7;
+  border: 1px solid #7EB1DC;
   width: 120px;
-  font-weight: 300;
-  text-decoration: none;
+  font-weight: 700;
   top: 11px;
   height: 30px;
   border-radius: 9px;
   text-align: center;
   padding-top: 3px;
   cursor: pointer;
-  color: #337ab7;
+  color: #7EB1DC;
   background: #fff;
   margin: auto;
+  font-size: 14px;
 }
 
 .btn-custom-email,
