--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -1,60 +1,8 @@
 <div ng-overlay ng-init='dashCtrl.initialize(); dashCtrl.registerEvents();'>
   <div id='dashboard-overlay' class='dashboard-overlay'>
     <i id='dash-overlay-exit-btn' class="fa fa-times"></i>
-    
-
-    <!-- Begin Show Create Room Overlay -->
-    <div ng-hide="showConfirmation">
-      <div ng-invite on-time-set='room.isTimeSet' name='room.name' guest-email='room.guestEmail' class='form-container'>
-        <form name="createRoom" id="create-a-room">
-          <p ng-class='{ "error-color" : (!( dashCtrl.isValidInput("name") )) }' class='create-room-title-copy'>{{ createRoomTitle || 'please enter a name for the room' }}
-            <span>
-        <i ng-class='{ "add-opacity" : ( dashCtrl.markChecked("name") ) }' class="fa fa-check"></i>
-        </span>
-          </p>
-          <input name='roomName' id="create-room-title" ng-model="room.name" class="input-small" type="text" placeholder="Monday Morning Meeting">
-          <p ng-class='{ "error-color" : (!( dashCtrl.isValidInput("guestEmail") )) }' class='create-room-email-copy'>{{ createRoomEmail || 'the email address of your guest' }}
-            <span>
-          <i ng-class='{ "add-opacity" : ( dashCtrl.markChecked("guestEmail") ) }' class="fa fa-check"></i>
-          </span>
-          </p>
-          <input name='guestEmail' id="create-room-email" ng-model="room.guestEmail" class="input-small" type="text" placeholder="guest@gmail.com">
-          <p ng-hide='dashCtrl.isValidInput("startDate")' class='create-room-start-copy' ng-class='{ "error-color" : ( invalidDateErr ) }'>{{ invalidDateErr || 'and a start date and start time for the session' }}</p>
-          <p ng-show='dashCtrl.isValidInput("startDate")' class='create-room-start-copy'>Selected Start Time
-            <span>
-          <i ng-class='{ "add-opacity" : ( dashCtrl.markChecked("startDate") ) }' class="fa fa-check"></i>
-          </span>
-            <br>
-            <span class='starts-at-formatted'>{{ room.startsAtFormatted }}</span>
-          </p>
-          <div class "date-picker-container-custom">
-            <datetimepicker id="date-picker" data-ng-model="date.dates" data-before-render="dashCtrl.beforeRender($view, $dates, $leftDate, $upDate, $rightDate)" data-datetimepicker-config="dashCtrl.configDateTimePicker()" data-on-set-time="dashCtrl.onTimeSet(newDate, oldDate)">
-            </datetimepicker>
-          </div>
-        </form>
-        <div ng-hide='createRoomErr' id="on-create-room-submit" class="btn-custom create-room-submit-btn">Create Room</div>
-        <p class='create-room-err'>{{ createRoomErr }}</p>
-      </div ng-invite>
-    </div>
-    <!-- End Show Create Room Overlay -->
-
-    <!-- Begin Show Room Confirmation Overlay -->
-    <div ng-show="showConfirmation" class='confirmation-container'>
-      <p class="confirmation-header">Here's The Details of Your Room</p>
-      <p class="confirmation-sub-header">Click create room and we'll send you and your guest a reminder an hour before the session starts.</p>
-      <a ng-click='dashCtrl.onOptSelected($event);' href='' id='on-update-room-submit' class="confirmation-sub-header-update">or click to update</a>
-      <div class='confirmation-copy-container'>
-        <div class='confirmation-line'></div>
-        <p class='confirmation-copy'>Room Name</p>
-        <p class='confirmation-data'> {{ room.name }}</p>
-        <p class='confirmation-copy'>Guest Email</p>
-        <p class='confirmation-data'> {{ room.guestEmail }}</p>
-        <p class='confirmation-copy'>Starts On</p>
-        <p class='confirmation-data'> {{ room.startsAtFormatted }}</p>
-        <div class='confirmation-line'></div>
-        <div ng-click='dashCtrl.onOptSelected($event);' id="on-create-room-confirm" class="btn-custom create-room-confirm-btn">Confirm Room</div>
-      </div>
-    </div>
+    <div ng-hide="showConfirmation" ng-include src="'views/includes/create-room.html'"></div>
+    <div ng-show="showConfirmation" ng-include src="'views/includes/create-confirmation.html'"></div>
   </div>
   <div id='dashboard-container' class="container">
     <div class="row-block">
@@ -72,41 +20,5 @@
       </div>
     </div>
   </div>
-  <div id="dashboard-table" class="container">
-    <div class="row">
-      <table st-table="table" class="table table-striped">
-        <thead>
-          <tr>
-            <th>room name</th>
-            <th>created by</th>
-            <th>members</th>
-            <th>status</th>
-            <th>options</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="obj in table">
-            <td class='table-copy-title'>{{ obj.name }}</td>
-            <td class='table-copy-created-by'>{{ obj.createdBy }} </td>
-            <td>
-              <button class="btn btn-md members" popover-placement="top" popover="{{obj.members}}" type="button">
-                <i class="fa fa-child">&nbsp;&nbsp;members</i>
-              </button>
-            </td>
-            <td ng-class='{ "connect-option" : ( dashCtrl.getReadyState(obj) ) }' class='table-copy-status'>
-              {{ obj.status }}
-            </td>
-            <td>
-              <button ng-if="(obj.options === 'connect')" ng-click='dashCtrl.onRowSelected(obj);' id='connect' name='connect' class="btn btn-md members" type="button">
-                <i class="fa fa-refresh fa-spin"></i> &nbsp;&nbsp;{{ obj.options }}
-              </button>
-              <button ng-if="(obj.options === 'details')" ng-click='dashCtrl.onRowSelected(obj);' id='details' name='details' class="btn btn-md members" type="button">
-                <i class="fa fa-tag"></i>&nbsp;&nbsp;{{ obj.options }}
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+  <div ng-include src="'views/includes/dashboard-table.html'"></div>
+</div ng-overlay>
