--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -3,20 +3,20 @@
   <div ng-show='showFooter' ng-init='footerCtrl.registerEvents();' id='footer-btn-container' class="navbar navbar-default navbar-fixed-bottom text-center">
     <ul ng-hide='showFeatureDisabled' id="footer-btns">
       <li>
-        <div id='share-file' ng-click='footerCtrl.options("location")' class="btn-custom share-file">share location</div>
+        <div id='share-file' ng-click='footerCtrl.onOptSelected("location")' class="btn-custom share-file">share location</div>
       </li>
       <li>
-        <div id='share-file' ng-click='footerCtrl.options("upload")' class="btn-custom share-file">share a file</div>
+        <div id='share-file' ng-click='footerCtrl.onOptSelected("upload")' class="btn-custom share-file">share a file</div>
       </li>
       <li>
-        <div id='record' ng-click='footerCtrl.options("record")' class="btn-custom record-session">record session</div>
+        <div id='record' ng-click='footerCtrl.onOptSelected("record")' class="btn-custom record-session">record session</div>
       </li>
       <li>
-        <div id='disconnect' ng-click='footerCtrl.options("disconnect")' class="btn-custom disconnect">disconnect</div>
+        <div id='disconnect' ng-click='footerCtrl.onOptSelected("disconnect")' class="btn-custom disconnect">disconnect</div>
       </li>
     </ul>
     <ul ng-show='showFeatureDisabled'>
-    <li>Feature Disabled Until Your Party Connects</li>
+      <li>Feature Disabled Until Your Party Connects</li>
     </ul>
   </div>
 </div>
