--- a/client/styles/date-picker-custom.css
+++ b/client/styles/date-picker-custom.css
@@ -29,6 +29,7 @@ i.glyphicon.glyphicon-arrow-right {
   right: 0;
   margin: 0 auto;
   background-color: transparent;
+  font-size: 16px;
 }
 
 #date-picker {
