--- a/client/views/includes/navbar.html
+++ b/client/views/includes/navbar.html
@@ -8,6 +8,7 @@
       <span class="icon-bar"></span>
     </button>
     <a class="navbar-brand">room baby</a>
+    <span class='time-left'> {{ navBarCtrl.getTimeLeft() }} </span>
   </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav navbar-right ">
