--- a/client/styles/footer.css
+++ b/client/styles/footer.css
@@ -1,60 +1,118 @@
- #footer-btn-container > ul:nth-child(2) > li {
-   color: white;
-   position: relative;
-   margin: auto;
-   top: 16px;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   height: 100%;
-   cursor: default;
- }
- 
- .nav.navbar-nav.footer-custom {
-   position: relative;
-   left: 0;
-   right: 0;
-   width: 100%;
-   top: 0;
-   bottom: 0;
-   margin: auto;
-   height: 47px;
- }
- 
- #footer-btns {
-   display: -webkit-inline-flex;
-   display: -ms-inline-flexbox;
-   display: inline-flex;
- }
- 
- #footer-overlay {
-   position: fixed;
-   background-color: rgba(0, 0, 0, .8);
-   width: 100%;
-   height: 47px;
-   bottom: 0;
-   margin: auto;
-   display: none;
-   border-top: 1px solid rgba(255, 255, 255, .6);
- }
- 
- .navbar.navbar-default.navbar-fixed-bottom {
-   opacity: 0;
-   border-top: transparent;
-   background-color: transparent;
- }
- 
- .navbar.navbar-default.navbar-fixed-bottom.show-footer {
-   opacity: 0;
- }
- 
- ul.nav.navbar-nav.footer-custom {
-   position: absolute;
-   left: 0;
-   right: 0;
-   top: 0;
-   bottom: 0;
-   margin: auto;
-   width: 100%;
-   text-align: center;
- }
+.fa.fa-video-camera {
+  color: white;
+  position: absolute;
+  left: 165px;
+  margin: auto;
+  top: 11px;
+  bottom: 0;
+  font-size: 14px;
+}
+
+ul.is-recording-container > li > span > button {
+  position: absolute;
+  top: 35px;
+  bottom: 0;
+  right: 125px;
+  height: 26px;
+  border-radius: 13px;
+  font-size: 12px;
+  padding: 0 20px;
+  color: #D46A6A;
+  margin: auto;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, .6);
+}
+
+ul.is-recording-container > li > p {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  font-size: 16px;
+  top: 0;
+  color: #79DFB6;
+  text-transform: uppercase;
+  width: 230px;
+  height: 24px;
+  margin: auto;
+  font-weight: 300;
+}
+
+ul.is-recording-container > li > span {
+  position: absolute;
+  right: 0;
+  margin: auto;
+}
+
+.is-recording-container {
+  position: relative;
+  width: 600px;
+  background-color: transparent;
+  bottom: 0;
+  margin: auto;
+  height: 35px;
+  margin-bottom: 0;
+  top: 10px;
+  right: 28px;
+}
+
+#footer-btn-container > ul:nth-child(2) > li {
+  color: orange;
+  position: relative;
+  margin: auto;
+  top: 16px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  cursor: default;
+}
+
+.nav.navbar-nav.footer-custom {
+  position: relative;
+  left: 0;
+  right: 0;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 47px;
+}
+
+#footer-btns {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+#footer-overlay {
+  position: fixed;
+  background-color: rgba(0, 0, 0, .8);
+  width: 100%;
+  height: 47px;
+  bottom: 0;
+  margin: auto;
+  display: none;
+  border-top: 1px solid rgba(255, 255, 255, .6);
+}
+
+.navbar.navbar-default.navbar-fixed-bottom {
+  opacity: 0;
+  border-top: transparent;
+  background-color: transparent;
+}
+
+.navbar.navbar-default.navbar-fixed-bottom.show-footer {
+  opacity: 0;
+}
+
+ul.nav.navbar-nav.footer-custom {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  width: 100%;
+  text-align: center;
+}
