--- a/client/views/session.html
+++ b/client/views/session.html
@@ -1,4 +1,4 @@
-<div ng-init='sessionCtrl.initialize();'></div>
+<div ng-init='sessionCtrl.isAuthenticated();'></div>
 <div id="layout-container"></div>
 <div class="span2 sidebar">
   <div class="container">
