--- a/server/views/index.html
+++ b/server/views/index.html
@@ -22,15 +22,15 @@
     <![endif]-->
   <script type="text/javascript">
   // IE and Chrome
-  if (String(window.location.hash).substring(0, 1) == "#") {
-    window.location.hash = "";
-    window.location.href = window.location.href.slice(0, -1);
-  }
-  // Firefox
-  if (String(location.hash).substring(0, 1) == "#") {
-    location.hash = "";
-    location.href = location.href.substring(0, location.href.length - 3);
-  }
+  // if (String(window.location.hash).substring(0, 1) == "#") {
+  //   window.location.hash = "";
+  //   window.location.href = window.location.href.slice(0, -1);
+  // }
+  // // Firefox
+  // if (String(location.hash).substring(0, 1) == "#") {
+  //   location.hash = "";
+  //   location.href = location.href.substring(0, location.href.length - 3);
+  // }
   </script>
 </head>
 
