--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -3,7 +3,7 @@
     <div class="col-md-12 text-center">
       <div class="row vertical-align-landing">
         <div class="cover">
-          <a href='' ng-click='landingCtrl.selectedOpt("roomBaby");' id='room-baby' class="text-inverse logo-text">room baby</a>
+          <a href='' ng-click='landingCtrl.onOptSelected("roomBaby");' id='room-baby' class="text-inverse logo-text">room baby</a>
           <hr class="landing-line">
           <div class="landing-sub-text-container">
             <p class="text-inverse slogan-text">a room for every occassion</p>
@@ -11,9 +11,9 @@
           <div ng-hide="showLogin || showRegister" class="landing-sub-text-container">
             <div class="landing-btn-container">
               <div class="facebook-btn-container">
-                <a id='facebook' ng-click="landingCtrl.selectedOpt('facebook');" class="btn btn-md btn-custom-facebook"><i class="fa fa-facebook"></i>Connect With Facebook</a>
+                <a id='facebook' ng-click="landingCtrl.onOptSelected('facebook');" class="btn btn-md btn-custom-facebook"><i class="fa fa-facebook"></i>Connect With Facebook</a>
                 <span class="or-copy">or</span>
-                <a id='email' ng-click="landingCtrl.selectedOpt('login');" class="btn btn-md btn-custom-email"><i class="fa fa-envelope"></i>Connect With Email</a>
+                <a id='email' ng-click="landingCtrl.onOptSelected('login');" class="btn btn-md btn-custom-email"><i class="fa fa-envelope"></i>Connect With Email</a>
               </div>
             </div>
           </div>
