renders create room for connected clients on success in dashboard

--- a/client/views/includes/navbar.html
+++ b/client/views/includes/navbar.html
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
     </button>
     <a class="navbar-brand">room baby</a>
-    <span ng-show="navBarCtrl.isTwentySecondsLeft();"class='thirty-left'>Twenty Seconds Left Till Session Expiration</span>
+    <span ng-show="navBarCtrl.isTwentySecondsLeft();"class='thirty-left'>Now Stopping The Recording</span>
     <span ng-show="navBarCtrl.isThirtySecondsLeft();"class='thirty-left'>Thirty Seconds Left Till Session Expiration</span>
     <span class='time-left'> {{ navBarCtrl.getTimeLeft() }} </span>
   </div>
