--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -21,5 +21,5 @@
     </div>
   </div>
   <div ng-include src="'views/includes/dashboard-sessions.html'"></div>
-  <div ng-include src="'views/includes/dashboard-archives.html'"></div>
+  <!-- <div ng-include src="'views/includes/dashboard-archives.html'"></div> -->
 </div ng-overlay>
