adds new favicon

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -16,6 +16,9 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/build/vendor.min.css">
   <link rel="stylesheet" href="/build/dev.min.css">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/scottjason/room-baby/master/client/assets/img/rb-favicon-64.png" />
+
+
   <!--[if lt IE 9]>
         <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
