renders archives in dashboard with saved video url

--- a/client/styles/dashboard.css
+++ b/client/styles/dashboard.css
@@ -1,3 +1,8 @@
+.y-scroll {
+  /*overflow-y: scroll !important;*/
+  overflow: scroll;
+}
+
 #dashboard-overlay > div:nth-child(2) > div > p {
   position: relative;
   left: 0;
@@ -70,22 +75,19 @@ div.form-container {
   cursor: pointer;
   z-index: 10;
 }
-
 .dashboard-overlay {
   position: fixed;
   width: 600px;
   height: 344;
   background-color: #000;
   margin: auto;
-  top: 0;
+  top: 56px;
   left: 0;
   right: 0;
-  bottom: 0;
   border: 1px solid #EFEFEF;
   border-radius: 15px;
   opacity: 0;
 }
-
 .fa.fa-circle-o-notch.fa-spin {
   font-size: 34px;
   margin-top: 20px;
