--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -366,7 +366,7 @@ button#details.btn.btn-md.members {
   border-radius: 12px;
   text-align: center;
   cursor: pointer;
-  color: rgba(255,255,255,.9);
+  color: rgba(255, 255, 255, .9);
   top: 200px;
   margin: auto;
   left: 0;
