--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -1,4 +1,4 @@
-<div ng-overlay ng-init='dashCtrl.isAuthenticated(); dashCtrl.registerEvents();'>
+<div ng-overlay clear-form='dashCtrl.clearForm()' ng-init='dashCtrl.isAuthenticated(); dashCtrl.registerEvents();' class='dashboard-overlay-container'>
   <div id='dashboard-overlay' class='dashboard-overlay'>
     <i id='dash-overlay-exit-btn' class="fa fa-times"></i>
     <div ng-hide="showConfirmation" ng-include src="'views/includes/create-room.html'"></div>
