--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -4,6 +4,7 @@
       <div class="row vertical-align-landing">
         <div class="cover">
           <a href='' ng-click='landingCtrl.onOptSelected("roomBaby");' id='room-baby' class="text-inverse logo-text">room baby</a>
+          <!-- <p id='how-this-works'>how this works</p> -->
           <hr class="landing-line">
           <div class="landing-sub-text-container">
             <p class="text-inverse slogan-text">a room for every occassion</p>
