--- a/server/views/index.html
+++ b/server/views/index.html
@@ -44,7 +44,7 @@
   </script>
 </head>
 
-<body ng-app="RoomBaby" ng-controller='GlobalCtrl as globalCtrl' ng-init='globalCtrl.init();' >
+<body ng-app="RoomBaby">
   <div ng-include src="'views/includes/navbar.html'"></div>
   <div id="fb-root"></div>
   <div ui-view></div>
